--- a/src/theme.less
+++ b/src/theme.less
@@ -2,3 +2,42 @@
 @theme-grey: #767676;
 @second-grey: #adadaddc;
 
+// 引入外部字体
+@font-face {
+    font-family: "ZoomlaXingtiJ2";
+    src: url("https://code.z01.com/font/ZoomlaXingtiJ2.eot?#iefix");
+    /* IE9 */
+    src: url("https://code.z01.com/font/ZoomlaXingtiJ2.eot?#iefix") format("embedded-opentype"),
+        /* IE6-IE8 */
+        url("https://code.z01.com/font/ZoomlaXingtiJ2.woff") format("woff"),
+        /* chrome、firefox */
+        url("https://code.z01.com/font/ZoomlaXingtiJ2.ttf") format("truetype"),
+        /* chrome、firefox、opera、Safari, Android, iOS 4.2+ */
+        url("https://code.z01.com/font/ZoomlaXingtiJ2.svg#ZoomlaXingtiJ2") format("svg");
+    /* iOS 4.1- */
+    font-style: normal;
+    font-weight: normal;
+}
+
+@font-face{
+    font-family:'ZoomlaXingtiJ3';
+    src: url('https://code.z01.com/font/ZoomlaXingtiJ3.eot?#iefix'); /* IE9 */
+    src: url('https://code.z01.com/font/ZoomlaXingtiJ3.eot?#iefix') format("embedded-opentype"), /* IE6-IE8 */
+    url('https://code.z01.com/font/ZoomlaXingtiJ3.woff') format("woff"), /* chrome、firefox */
+    url('https://code.z01.com/font/ZoomlaXingtiJ3.ttf') format("truetype"), /* chrome、firefox、opera、Safari, Android, iOS 4.2+ */
+    url("http://code.z01.com/font/ZoomlaXingtiJ3.svg#ZoomlaXingtiJ3") format("svg"); /* iOS 4.1- */
+    font-style: normal; font-weight: normal;
+}
+
+@font-face{font-family:'zFont2';
+    src: url('https://code.z01.com/font/zFont2.eot?#iefix'); /* IE9 */
+    src: url('https://code.z01.com/font/zFont2.eot?#iefix') format("embedded-opentype"), /* IE6-IE8 */
+    url('https://code.z01.com/font/zFont2.woff') format("woff"), /* chrome、firefox */
+    url('https://code.z01.com/font/zFont2.ttf') format("truetype"), /* chrome、firefox、opera、Safari, Android, iOS 4.2+ */
+    url('https://code.z01.com/font/zFont2.svg#zFont2') format("svg"); /* iOS 4.1- */
+    font-style: normal; font-weight: normal;}
+
+@ZoomlaXingtiJ2: ZoomlaXingtiJ2;
+@ZoomlaXingtiJ3: ZoomlaXingtiJ3;
+@ZoomlaXingtiJ4: ZoomlaXingtiJ4;
+@zFont2: zFont2;
