--- a/src/theme.less
+++ b/src/theme.less
@@ -1,6 +1,7 @@
-@theme-green: #00c25b;
+@theme-blue: #2d5589;
 @theme-grey: #767676;
 @second-grey: #adadaddc;
+@link-blue: #104E8B;
 
 // 引入外部字体
 @font-face {
