--- a/src/theme.less
+++ b/src/theme.less
@@ -2,6 +2,9 @@
 @theme-grey: #767676;
 @second-grey: #adadaddc;
 @link-blue: #104E8B;
+@border-grey: #cccccc;
+@page-bg-grey: #f0eff4;
+@list-border-bottom: 1rpx solid @border-grey;
 
 // 引入外部字体
 @font-face {
