--- a/src/theme.less
+++ b/src/theme.less
@@ -5,6 +5,7 @@
 @border-grey: #cccccc;
 @page-bg-grey: #f0eff4;
 @list-border-bottom: 1rpx solid @border-grey;
+@theme-red: #92130a;
 
 // 引入外部字体
 @font-face {
