--- a/src/theme.less
+++ b/src/theme.less
@@ -1,7 +1,7 @@
 @theme-blue: #2d5589;
 @theme-grey: #767676;
 @second-grey: #adadaddc;
-@link-blue: #104E8B;
+@link-blue: #0066cc;
 @border-grey: #cccccc;
 @page-bg-grey: #f0eff4;
 @list-border-bottom: 1rpx solid @border-grey;
